--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/core": "~7.13.7",
-    "@react-navigation/native": "~7.1.26",
+    "@react-navigation/native": "^7.1.8",
     "@shopify/flash-list": "2.0.2",
     "@tanstack/query-async-storage-persister": "~5.90.14",
     "@tanstack/react-query": "~5.90.12",
@@ -23,12 +23,12 @@
     "axios": "~1.13.2",
     "buffer": "~6.0.3",
     "clsx": "~2.1.1",
-    "expo": "54.0.30",
+    "expo": "~54.0.31",
     "expo-auth-session": "~7.0.10",
     "expo-av": "~16.0.8",
     "expo-brightness": "~14.0.8",
     "expo-camera": "~17.0.10",
-    "expo-constants": "~18.0.12",
+    "expo-constants": "~18.0.13",
     "expo-device": "~8.0.10",
     "expo-font": "~14.0.10",
     "expo-keep-awake": "~15.0.8",
